# CMakeList

./: CMakeLists.txt  client.c  disPlayWindow.c  disPlayWindow.h  displayRcMail.c  displayRcMail.h  initialize.c  initialize.h  logcheck.c  logcheck.h  main.c  regist.c  regist.h  sendMail.c  sendMail.h  set_font_size.c  set_font_size.h
